fix(interview): 修复知识串联页面 mermaid 图表未闭合问题 | Fix unclosed mermaid diagram HTML tags in knowledge-integration page
修复 mermaid 代码块中包含的 <br/> 标签导致 VitePress 构建失败问题。
Fix issue where VitePress build failed due to <br/> tags in mermaid diagram.